{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 78,
  "lineage": "8b987a01-0644-32d9-e181-3b016998deea",
  "resources": [
    {
      "module": "module.azure_firewall",
      "mode": "managed",
      "type": "azurerm_firewall_policy",
      "name": "base_policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "base_policy_id": "",
            "child_policies": [],
            "dns": [
              {
                "network_rule_fqdn_enabled": false,
                "proxy_enabled": true,
                "servers": null
              }
            ],
            "firewalls": [],
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/firewallPolicies/afwp-base",
            "identity": [],
            "intrusion_detection": [],
            "location": "centralus",
            "name": "afwp-base",
            "private_ip_ranges": null,
            "resource_group_name": "rg-net-core-hub-centralus",
            "rule_collection_groups": [],
            "sku": "Standard",
            "tags": null,
            "threat_intelligence_allowlist": [],
            "threat_intelligence_mode": "Alert",
            "timeouts": null,
            "tls_certificate": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub_rg"
          ]
        }
      ]
    },
    {
      "module": "module.azure_firewall",
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "aks_rule_collection",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [
              {
                "action": "Allow",
                "name": "aks-app-rule-collection",
                "priority": 200,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [
                      "AzureKubernetesService"
                    ],
                    "destination_fqdns": [],
                    "destination_urls": [],
                    "name": "aks-service-tag",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [],
                    "source_ip_groups": [
                      "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/ipGroups/mlw-spoke-ipgroup"
                    ],
                    "terminate_tls": null,
                    "web_categories": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "*.azurecr.io",
                      "*.docker.io",
                      "acs-mirror.azureedge.net",
                      "production.cloudflare.docker.com"
                    ],
                    "destination_urls": [],
                    "name": "aks-acs-rules",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [],
                    "source_ip_groups": [
                      "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/ipGroups/mlw-spoke-ipgroup"
                    ],
                    "terminate_tls": null,
                    "web_categories": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "*.prod.microsoftmetrics.com"
                    ],
                    "destination_urls": [],
                    "name": "microsoft-metrics-rules",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [],
                    "source_ip_groups": [
                      "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/ipGroups/mlw-spoke-ipgroup"
                    ],
                    "terminate_tls": null,
                    "web_categories": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "api.snapcraft.io",
                      "motd.ubuntu.com"
                    ],
                    "destination_urls": [],
                    "name": "ubuntu-libraries",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [],
                    "source_ip_groups": [
                      "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/ipGroups/mlw-spoke-ipgroup"
                    ],
                    "terminate_tls": null,
                    "web_categories": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "crl.microsoft.com",
                      "crl3.digicert.com",
                      "mscrl.microsoft.com",
                      "ocsp.digicert.com"
                    ],
                    "destination_urls": [],
                    "name": "microsoft-crls",
                    "protocols": [
                      {
                        "port": 80,
                        "type": "Http"
                      }
                    ],
                    "source_addresses": [],
                    "source_ip_groups": [
                      "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/ipGroups/mlw-spoke-ipgroup"
                    ],
                    "terminate_tls": null,
                    "web_categories": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "github.com"
                    ],
                    "destination_urls": [],
                    "name": "github-rules",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [],
                    "source_ip_groups": [
                      "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/ipGroups/mlw-spoke-ipgroup"
                    ],
                    "terminate_tls": null,
                    "web_categories": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "login.microsoftonline.com"
                    ],
                    "destination_urls": [],
                    "name": "microsoft-login-rules",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      }
                    ],
                    "source_addresses": [],
                    "source_ip_groups": [
                      "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/ipGroups/mlw-spoke-ipgroup"
                    ],
                    "terminate_tls": null,
                    "web_categories": []
                  }
                ]
              }
            ],
            "firewall_policy_id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/firewallPolicies/afwp-base",
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/firewallPolicies/afwp-base/ruleCollectionGroups/aks-afwpolicy-rcg",
            "name": "aks-afwpolicy-rcg",
            "nat_rule_collection": [],
            "network_rule_collection": [
              {
                "action": "Allow",
                "name": "aks-network-rule-collection",
                "priority": 100,
                "rule": [
                  {
                    "destination_addresses": [
                      "*"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "123"
                    ],
                    "name": "aks-ntp-network-rule",
                    "protocols": [
                      "UDP"
                    ],
                    "source_addresses": [],
                    "source_ip_groups": [
                      "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/ipGroups/mlw-spoke-ipgroup"
                    ]
                  },
                  {
                    "destination_addresses": [
                      "AzureCloud"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "443",
                      "9000"
                    ],
                    "name": "aks-global-network-rule",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [],
                    "source_ip_groups": [
                      "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/ipGroups/mlw-spoke-ipgroup"
                    ]
                  }
                ]
              }
            ],
            "priority": 200,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_ip_group.ip_group_mlw_spoke",
            "azurerm_resource_group.hub_rg",
            "module.azure_firewall.azurerm_firewall_policy.base_policy"
          ]
        }
      ]
    },
    {
      "module": "module.azure_firewall",
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "hub_to_spoke_rule_collection",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [],
            "firewall_policy_id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/firewallPolicies/afwp-base",
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/firewallPolicies/afwp-base/ruleCollectionGroups/hub-to-spoke-afwpolicy-rcg",
            "name": "hub-to-spoke-afwpolicy-rcg",
            "nat_rule_collection": [],
            "network_rule_collection": [
              {
                "action": "Allow",
                "name": "hub-to-spoke-network-rule-collection",
                "priority": 100,
                "rule": [
                  {
                    "destination_addresses": [],
                    "destination_fqdns": [],
                    "destination_ip_groups": [
                      "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/ipGroups/hub-ipgroup"
                    ],
                    "destination_ports": [
                      "*"
                    ],
                    "name": "hub-to-spoke-global-network-rule",
                    "protocols": [
                      "Any"
                    ],
                    "source_addresses": [],
                    "source_ip_groups": [
                      "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/ipGroups/mlw-spoke-ipgroup"
                    ]
                  }
                ]
              }
            ],
            "priority": 110,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_ip_group.ip_group_hub",
            "azurerm_ip_group.ip_group_mlw_spoke",
            "azurerm_resource_group.hub_rg",
            "module.azure_firewall.azurerm_firewall_policy.base_policy"
          ]
        }
      ]
    },
    {
      "module": "module.azure_firewall",
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "mlw_rule_collection",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [
              {
                "action": "Allow",
                "name": "mlw-app-rule-collection",
                "priority": 200,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "*.anaconda.com",
                      "anaconda.com"
                    ],
                    "destination_urls": [],
                    "name": "anaconda.com",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      },
                      {
                        "port": 80,
                        "type": "Http"
                      }
                    ],
                    "source_addresses": [],
                    "source_ip_groups": [
                      "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/ipGroups/mlw-spoke-ipgroup"
                    ],
                    "terminate_tls": null,
                    "web_categories": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "*.anaconda.org"
                    ],
                    "destination_urls": [],
                    "name": "anaconda.org",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      },
                      {
                        "port": 80,
                        "type": "Http"
                      }
                    ],
                    "source_addresses": [],
                    "source_ip_groups": [
                      "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/ipGroups/mlw-spoke-ipgroup"
                    ],
                    "terminate_tls": null,
                    "web_categories": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "*.tensorflow.org"
                    ],
                    "destination_urls": [],
                    "name": "tensorflow.org",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      },
                      {
                        "port": 80,
                        "type": "Http"
                      }
                    ],
                    "source_addresses": [],
                    "source_ip_groups": [
                      "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/ipGroups/mlw-spoke-ipgroup"
                    ],
                    "terminate_tls": null,
                    "web_categories": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "*.vo.msecnd.net",
                      "update.code.visualstudio.com"
                    ],
                    "destination_urls": [],
                    "name": "update.code.visualstudio.com",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      },
                      {
                        "port": 80,
                        "type": "Http"
                      }
                    ],
                    "source_addresses": [],
                    "source_ip_groups": [
                      "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/ipGroups/mlw-spoke-ipgroup"
                    ],
                    "terminate_tls": null,
                    "web_categories": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "*pytorch.org"
                    ],
                    "destination_urls": [],
                    "name": "pytorch.org",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      },
                      {
                        "port": 80,
                        "type": "Http"
                      }
                    ],
                    "source_addresses": [],
                    "source_ip_groups": [
                      "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/ipGroups/mlw-spoke-ipgroup"
                    ],
                    "terminate_tls": null,
                    "web_categories": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "cloud.r-project.org"
                    ],
                    "destination_urls": [],
                    "name": "cloud.r-project.org",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      },
                      {
                        "port": 80,
                        "type": "Http"
                      }
                    ],
                    "source_addresses": [],
                    "source_ip_groups": [
                      "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/ipGroups/mlw-spoke-ipgroup"
                    ],
                    "terminate_tls": null,
                    "web_categories": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "dc.applicationinsights.azure.com"
                    ],
                    "destination_urls": [],
                    "name": "dc.applicationinsights.azure.com",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      },
                      {
                        "port": 80,
                        "type": "Http"
                      }
                    ],
                    "source_addresses": [],
                    "source_ip_groups": [
                      "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/ipGroups/mlw-spoke-ipgroup"
                    ],
                    "terminate_tls": null,
                    "web_categories": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "dc.applicationinsights.microsoft.com"
                    ],
                    "destination_urls": [],
                    "name": "dc.applicationinsights.microsoft.com",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      },
                      {
                        "port": 80,
                        "type": "Http"
                      }
                    ],
                    "source_addresses": [],
                    "source_ip_groups": [
                      "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/ipGroups/mlw-spoke-ipgroup"
                    ],
                    "terminate_tls": null,
                    "web_categories": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "dc.services.visualstudio.com"
                    ],
                    "destination_urls": [],
                    "name": "dc.services.visualstudio.com",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      },
                      {
                        "port": 80,
                        "type": "Http"
                      }
                    ],
                    "source_addresses": [],
                    "source_ip_groups": [
                      "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/ipGroups/mlw-spoke-ipgroup"
                    ],
                    "terminate_tls": null,
                    "web_categories": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "graph.windows.net"
                    ],
                    "destination_urls": [],
                    "name": "graph.windows.net",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      },
                      {
                        "port": 80,
                        "type": "Http"
                      }
                    ],
                    "source_addresses": [],
                    "source_ip_groups": [
                      "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/ipGroups/mlw-spoke-ipgroup"
                    ],
                    "terminate_tls": null,
                    "web_categories": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "pypi.org"
                    ],
                    "destination_urls": [],
                    "name": "pypi.org",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      },
                      {
                        "port": 80,
                        "type": "Http"
                      }
                    ],
                    "source_addresses": [],
                    "source_ip_groups": [
                      "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/ipGroups/mlw-spoke-ipgroup"
                    ],
                    "terminate_tls": null,
                    "web_categories": []
                  }
                ]
              }
            ],
            "firewall_policy_id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/firewallPolicies/afwp-base",
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/firewallPolicies/afwp-base/ruleCollectionGroups/mlw-afwpolicy-rcg",
            "name": "mlw-afwpolicy-rcg",
            "nat_rule_collection": [],
            "network_rule_collection": [
              {
                "action": "Allow",
                "name": "mlw-network-rule-collection",
                "priority": 100,
                "rule": [
                  {
                    "destination_addresses": [
                      "AzureActiveDirectory"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "*"
                    ],
                    "name": "Azure-Active-Directory",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [],
                    "source_ip_groups": [
                      "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/ipGroups/mlw-spoke-ipgroup"
                    ]
                  },
                  {
                    "destination_addresses": [
                      "AzureContainerRegistry"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "443"
                    ],
                    "name": "Azure-Container-Registry",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [],
                    "source_ip_groups": [
                      "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/ipGroups/mlw-spoke-ipgroup"
                    ]
                  },
                  {
                    "destination_addresses": [
                      "AzureFrontDoor.Frontend"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "443"
                    ],
                    "name": "Azure-Front-Door-Frontend",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [],
                    "source_ip_groups": [
                      "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/ipGroups/mlw-spoke-ipgroup"
                    ]
                  },
                  {
                    "destination_addresses": [
                      "AzureKeyVault"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "443"
                    ],
                    "name": "Azure-Key-Vault",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [],
                    "source_ip_groups": [
                      "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/ipGroups/mlw-spoke-ipgroup"
                    ]
                  },
                  {
                    "destination_addresses": [
                      "AzureMachineLearning"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "443"
                    ],
                    "name": "Azure-Machine-Learning",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [],
                    "source_ip_groups": [
                      "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/ipGroups/mlw-spoke-ipgroup"
                    ]
                  },
                  {
                    "destination_addresses": [
                      "AzureResourceManager"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "443"
                    ],
                    "name": "Azure-Resource-Manager",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [],
                    "source_ip_groups": [
                      "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/ipGroups/mlw-spoke-ipgroup"
                    ]
                  },
                  {
                    "destination_addresses": [
                      "MicrosoftContainerRegistry"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "443"
                    ],
                    "name": "Microsoft-Container-Registry",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [],
                    "source_ip_groups": [
                      "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/ipGroups/mlw-spoke-ipgroup"
                    ]
                  },
                  {
                    "destination_addresses": [
                      "Storage"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "443"
                    ],
                    "name": "Azure-Storage",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [],
                    "source_ip_groups": [
                      "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/ipGroups/mlw-spoke-ipgroup"
                    ]
                  }
                ]
              }
            ],
            "priority": 300,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_ip_group.ip_group_mlw_spoke",
            "azurerm_resource_group.hub_rg",
            "module.azure_firewall.azurerm_firewall_policy.base_policy"
          ]
        }
      ]
    },
    {
      "module": "module.azure_firewall",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "azure_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/publicIPAddresses/pip-azfw",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.86.6.163",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "pip-azfw",
            "resource_group_name": "rg-net-core-hub-centralus",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg"
          ]
        }
      ]
    },
    {
      "module": "module.azure_firewall",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "azure_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.4.0/24",
            "address_prefixes": [
              "10.1.4.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/virtualNetworks/vnet-hub-centralus/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "rg-net-core-hub-centralus",
            "virtual_network_name": "vnet-hub-centralus"
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "module.hub_vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "bastion_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/networkSecurityGroups/nsg-bastion",
            "location": "centralus",
            "name": "nsg-bastion",
            "resource_group_name": "rg-net-core-hub-centralus",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAzureLBInbound",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "AzureLoadBalancer",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowGatewayManagerInbound",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "GatewayManager",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPSInbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "AzureCloud",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "443"
                ],
                "direction": "Outbound",
                "name": "AllowAzureCloudOutbound",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "Internet",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "80"
                ],
                "direction": "Outbound",
                "name": "AllowGetSessionInformation",
                "priority": 130,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22",
                  "3389"
                ],
                "direction": "Outbound",
                "name": "AllowRdpSshOutbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "5701",
                  "8080"
                ],
                "direction": "Inbound",
                "name": "AllowBastionHostCommunication",
                "priority": 400,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "5701",
                  "8080"
                ],
                "direction": "Outbound",
                "name": "AllowBastionHostCommunicationOutbound",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub_rg"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "azure_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/publicIPAddresses/pip-azure-bastion",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.86.7.117",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "pip-azure-bastion",
            "resource_group_name": "rg-net-core-hub-centralus",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "azure_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.3.0/24",
            "address_prefixes": [
              "10.1.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/virtualNetworks/vnet-hub-centralus/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "resource_group_name": "rg-net-core-hub-centralus",
            "virtual_network_name": "vnet-hub-centralus"
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "module.hub_vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "bastion_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/virtualNetworks/vnet-hub-centralus/subnets/AzureBastionSubnet",
            "network_security_group_id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/networkSecurityGroups/nsg-bastion",
            "subnet_id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/virtualNetworks/vnet-hub-centralus/subnets/AzureBastionSubnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "module.bastion.azurerm_bastion_host.azure_bastion_instance",
            "module.bastion.azurerm_network_security_group.bastion_nsg",
            "module.bastion.azurerm_public_ip.azure_bastion",
            "module.bastion.azurerm_subnet.azure_bastion",
            "module.hub_vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.hub_vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "dns_servers": [
              "168.63.129.16"
            ],
            "guid": "83306279-4c40-4076-a225-26cc93eb58e5",
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/virtualNetworks/vnet-hub-centralus",
            "location": "centralus",
            "name": "vnet-hub-centralus",
            "resource_group_name": "rg-net-core-hub-centralus",
            "tags": {
              "application": "networking"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg"
          ]
        }
      ]
    },
    {
      "module": "module.hub_vnet_default_subnet",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet_name",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "dns_servers": [
              "168.63.129.16"
            ],
            "guid": "83306279-4c40-4076-a225-26cc93eb58e5",
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/virtualNetworks/vnet-hub-centralus",
            "location": "centralus",
            "name": "vnet-hub-centralus",
            "resource_group_name": "rg-net-core-hub-centralus",
            "subnets": [
              "AzureBastionSubnet",
              "AzureFirewallSubnet",
              "snet-default",
              "snet-jumphost"
            ]
          }
        }
      ]
    },
    {
      "module": "module.hub_vnet_default_subnet",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/routeTables/rt-snet-default",
            "location": "centralus",
            "name": "rt-snet-default",
            "resource_group_name": "rg-net-core-hub-centralus",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "default_egress",
                "next_hop_in_ip_address": "10.1.4.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "module.azure_firewall.azurerm_firewall.azure_firewall_instance",
            "module.azure_firewall.azurerm_firewall_policy.base_policy",
            "module.azure_firewall.azurerm_public_ip.azure_firewall",
            "module.azure_firewall.azurerm_subnet.azure_firewall",
            "module.hub_vnet.azurerm_virtual_network.vnet",
            "module.hub_vnet_default_subnet.azurerm_subnet.vnet",
            "module.hub_vnet_default_subnet.data.azurerm_virtual_network.vnet_name",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.hub_vnet_default_subnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.1.0/24",
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/virtualNetworks/vnet-hub-centralus/subnets/snet-default",
            "name": "snet-default",
            "resource_group_name": "rg-net-core-hub-centralus",
            "virtual_network_name": "vnet-hub-centralus"
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "module.hub_vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.hub_vnet_default_subnet",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "route_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/virtualNetworks/vnet-hub-centralus/subnets/snet-default",
            "route_table_id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/routeTables/rt-snet-default",
            "subnet_id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/virtualNetworks/vnet-hub-centralus/subnets/snet-default"
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "module.azure_firewall.azurerm_firewall.azure_firewall_instance",
            "module.azure_firewall.azurerm_firewall_policy.base_policy",
            "module.azure_firewall.azurerm_public_ip.azure_firewall",
            "module.azure_firewall.azurerm_subnet.azure_firewall",
            "module.hub_vnet.azurerm_virtual_network.vnet",
            "module.hub_vnet_default_subnet.azurerm_route_table.rt",
            "module.hub_vnet_default_subnet.azurerm_subnet.vnet",
            "module.hub_vnet_default_subnet.data.azurerm_virtual_network.vnet_name",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.jump_host",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "jump_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/networkInterfaces/nic-vmjumphost",
            "internal_domain_name_suffix": "pfrdba0ajr1ebirfe1gjh00y2f.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "configuration",
                "primary": true,
                "private_ip_address": "10.1.2.5",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/virtualNetworks/vnet-hub-centralus/subnets/snet-jumphost"
              }
            ],
            "location": "centralus",
            "name": "nic-vmjumphost",
            "private_ip_address": "10.1.2.5",
            "private_ip_addresses": [
              "10.1.2.5"
            ],
            "resource_group_name": "rg-net-core-hub-centralus"
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "azurerm_resource_group.spoke_shared_rg",
            "module.hub_vnet.azurerm_virtual_network.vnet",
            "module.jump_host.azurerm_subnet.jump_host"
          ]
        }
      ]
    },
    {
      "module": "module.jump_host",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "jump_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/networkSecurityGroups/nsg-jumphost-subnet",
            "location": "centralus",
            "name": "nsg-jumphost-subnet",
            "resource_group_name": "rg-net-core-hub-centralus",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "azurerm_resource_group.spoke_shared_rg"
          ]
        }
      ]
    },
    {
      "module": "module.jump_host",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "jumphost_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/routeTables/rt-snet-jumphost",
            "location": "centralus",
            "name": "rt-snet-jumphost",
            "resource_group_name": "rg-net-core-hub-centralus",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "default_egress",
                "next_hop_in_ip_address": "10.1.4.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "azurerm_resource_group.spoke_shared_rg",
            "module.azure_firewall.azurerm_firewall.azure_firewall_instance",
            "module.azure_firewall.azurerm_firewall_policy.base_policy",
            "module.azure_firewall.azurerm_public_ip.azure_firewall",
            "module.azure_firewall.azurerm_subnet.azure_firewall",
            "module.hub_vnet.azurerm_virtual_network.vnet",
            "module.jump_host.azurerm_subnet.jump_host",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.jump_host",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "jump_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.2.0/24",
            "address_prefixes": [
              "10.1.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/virtualNetworks/vnet-hub-centralus/subnets/snet-jumphost",
            "name": "snet-jumphost",
            "resource_group_name": "rg-net-core-hub-centralus",
            "virtual_network_name": "vnet-hub-centralus"
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "azurerm_resource_group.spoke_shared_rg",
            "module.hub_vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.jump_host",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "jumphost_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/virtualNetworks/vnet-hub-centralus/subnets/snet-jumphost",
            "network_security_group_id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/networkSecurityGroups/nsg-jumphost-subnet",
            "subnet_id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/virtualNetworks/vnet-hub-centralus/subnets/snet-jumphost"
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "azurerm_resource_group.spoke_shared_rg",
            "module.hub_vnet.azurerm_virtual_network.vnet",
            "module.jump_host.azurerm_network_security_group.jump_host",
            "module.jump_host.azurerm_subnet.jump_host"
          ]
        }
      ]
    },
    {
      "module": "module.jump_host",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "route_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/virtualNetworks/vnet-hub-centralus/subnets/snet-jumphost",
            "route_table_id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/routeTables/rt-snet-jumphost",
            "subnet_id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/virtualNetworks/vnet-hub-centralus/subnets/snet-jumphost"
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "azurerm_resource_group.spoke_shared_rg",
            "module.azure_firewall.azurerm_firewall.azure_firewall_instance",
            "module.azure_firewall.azurerm_firewall_policy.base_policy",
            "module.azure_firewall.azurerm_public_ip.azure_firewall",
            "module.azure_firewall.azurerm_subnet.azure_firewall",
            "module.hub_vnet.azurerm_virtual_network.vnet",
            "module.jump_host.azurerm_route_table.jumphost_rt",
            "module.jump_host.azurerm_subnet.jump_host",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.machine_learning_workspace",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg-aks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-shared-mlw-spoke-centralus/providers/Microsoft.Network/networkSecurityGroups/nsg-aks",
            "location": "centralus",
            "name": "nsg-aks",
            "resource_group_name": "rg-shared-mlw-spoke-centralus",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.spoke_shared_rg"
          ]
        }
      ]
    },
    {
      "module": "module.machine_learning_workspace",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg-training",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-shared-mlw-spoke-centralus/providers/Microsoft.Network/networkSecurityGroups/nsg-training",
            "location": "centralus",
            "name": "nsg-training",
            "resource_group_name": "rg-shared-mlw-spoke-centralus",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "29876-29877",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "BatchNodeManagement",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "BatchNodeManagement",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "44224",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AzureMachineLearning",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "AzureMachineLearning",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.spoke_shared_rg"
          ]
        }
      ]
    },
    {
      "module": "module.machine_learning_workspace",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg-aks-link",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-spoke-centralus/providers/Microsoft.Network/virtualNetworks/vnet-spk-centralus/subnets/snet-aks",
            "network_security_group_id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-shared-mlw-spoke-centralus/providers/Microsoft.Network/networkSecurityGroups/nsg-aks",
            "subnet_id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-spoke-centralus/providers/Microsoft.Network/virtualNetworks/vnet-spk-centralus/subnets/snet-aks"
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "azurerm_resource_group.spoke_shared_rg",
            "azurerm_resource_group.spoke_vnet_rg",
            "module.azure_firewall.azurerm_firewall.azure_firewall_instance",
            "module.azure_firewall.azurerm_firewall_policy.base_policy",
            "module.azure_firewall.azurerm_public_ip.azure_firewall",
            "module.azure_firewall.azurerm_subnet.azure_firewall",
            "module.hub_vnet.azurerm_virtual_network.vnet",
            "module.machine_learning_workspace.azurerm_network_security_group.nsg-aks",
            "module.spoke_vnet.azurerm_virtual_network.vnet",
            "module.spoke_vnet_aks_subnet.azurerm_subnet.vnet",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.machine_learning_workspace",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg-training-link",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-spoke-centralus/providers/Microsoft.Network/virtualNetworks/vnet-spk-centralus/subnets/snet-training",
            "network_security_group_id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-shared-mlw-spoke-centralus/providers/Microsoft.Network/networkSecurityGroups/nsg-training",
            "subnet_id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-spoke-centralus/providers/Microsoft.Network/virtualNetworks/vnet-spk-centralus/subnets/snet-training"
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "azurerm_resource_group.spoke_shared_rg",
            "azurerm_resource_group.spoke_vnet_rg",
            "module.azure_firewall.azurerm_firewall.azure_firewall_instance",
            "module.azure_firewall.azurerm_firewall_policy.base_policy",
            "module.azure_firewall.azurerm_public_ip.azure_firewall",
            "module.azure_firewall.azurerm_subnet.azure_firewall",
            "module.hub_vnet.azurerm_virtual_network.vnet",
            "module.machine_learning_workspace.azurerm_network_security_group.nsg-training",
            "module.spoke_vnet.azurerm_virtual_network.vnet",
            "module.spoke_vnet_training_subnet.azurerm_subnet.vnet",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.peering_hub_to_spoke",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "direction1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/virtualNetworks/vnet-hub-centralus/virtualNetworkPeerings/vnet-hub-centralus-to-vnet-spk-centralus",
            "name": "vnet-hub-centralus-to-vnet-spk-centralus",
            "remote_virtual_network_id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-spoke-centralus/providers/Microsoft.Network/virtualNetworks/vnet-spk-centralus",
            "resource_group_name": "rg-net-core-hub-centralus",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-hub-centralus"
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "azurerm_resource_group.spoke_vnet_rg",
            "module.azure_firewall.azurerm_firewall.azure_firewall_instance",
            "module.azure_firewall.azurerm_firewall_policy.base_policy",
            "module.azure_firewall.azurerm_public_ip.azure_firewall",
            "module.azure_firewall.azurerm_subnet.azure_firewall",
            "module.hub_vnet.azurerm_virtual_network.vnet",
            "module.spoke_vnet.azurerm_virtual_network.vnet",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.peering_spoke_to_hub",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "direction2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-spoke-centralus/providers/Microsoft.Network/virtualNetworks/vnet-spk-centralus/virtualNetworkPeerings/vnet-spk-centralus-to-vnet-hub-centralus",
            "name": "vnet-spk-centralus-to-vnet-hub-centralus",
            "remote_virtual_network_id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/virtualNetworks/vnet-hub-centralus",
            "resource_group_name": "rg-net-spoke-centralus",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-spk-centralus"
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "azurerm_resource_group.spoke_vnet_rg",
            "module.azure_firewall.azurerm_firewall.azure_firewall_instance",
            "module.azure_firewall.azurerm_firewall_policy.base_policy",
            "module.azure_firewall.azurerm_public_ip.azure_firewall",
            "module.azure_firewall.azurerm_subnet.azure_firewall",
            "module.hub_vnet.azurerm_virtual_network.vnet",
            "module.spoke_vnet.azurerm_virtual_network.vnet",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.3.0.0/16"
            ],
            "dns_servers": [
              "10.1.4.4"
            ],
            "guid": "4ab7aff0-1deb-42a1-9eaa-7156bad5525f",
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-spoke-centralus/providers/Microsoft.Network/virtualNetworks/vnet-spk-centralus",
            "location": "centralus",
            "name": "vnet-spk-centralus",
            "resource_group_name": "rg-net-spoke-centralus",
            "tags": {
              "application": "networking"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "azurerm_resource_group.spoke_vnet_rg",
            "module.azure_firewall.azurerm_firewall.azure_firewall_instance",
            "module.azure_firewall.azurerm_firewall_policy.base_policy",
            "module.azure_firewall.azurerm_public_ip.azure_firewall",
            "module.azure_firewall.azurerm_subnet.azure_firewall",
            "module.hub_vnet.azurerm_virtual_network.vnet",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_vnet_aks_subnet",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet_name",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.3.0.0/16"
            ],
            "dns_servers": [
              "10.1.4.4"
            ],
            "guid": "4ab7aff0-1deb-42a1-9eaa-7156bad5525f",
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-spoke-centralus/providers/Microsoft.Network/virtualNetworks/vnet-spk-centralus",
            "location": "centralus",
            "name": "vnet-spk-centralus",
            "resource_group_name": "rg-net-spoke-centralus",
            "subnets": [
              "snet-scoring",
              "snet-aks"
            ],
            "vnet_peerings": {
              "vnet-spk-centralus-to-vnet-hub-centralus": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/virtualNetworks/vnet-hub-centralus"
            }
          }
        }
      ]
    },
    {
      "module": "module.spoke_vnet_aks_subnet",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-spoke-centralus/providers/Microsoft.Network/routeTables/rt-snet-aks",
            "location": "centralus",
            "name": "rt-snet-aks",
            "resource_group_name": "rg-net-spoke-centralus",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "default_egress",
                "next_hop_in_ip_address": "10.1.4.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "azurerm_resource_group.spoke_vnet_rg",
            "module.azure_firewall.azurerm_firewall.azure_firewall_instance",
            "module.azure_firewall.azurerm_firewall_policy.base_policy",
            "module.azure_firewall.azurerm_public_ip.azure_firewall",
            "module.azure_firewall.azurerm_subnet.azure_firewall",
            "module.hub_vnet.azurerm_virtual_network.vnet",
            "module.spoke_vnet.azurerm_virtual_network.vnet",
            "module.spoke_vnet_aks_subnet.azurerm_subnet.vnet",
            "module.spoke_vnet_aks_subnet.data.azurerm_virtual_network.vnet_name",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_vnet_aks_subnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.3.2.0/24",
            "address_prefixes": [
              "10.3.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-spoke-centralus/providers/Microsoft.Network/virtualNetworks/vnet-spk-centralus/subnets/snet-aks",
            "name": "snet-aks",
            "resource_group_name": "rg-net-spoke-centralus",
            "virtual_network_name": "vnet-spk-centralus"
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "azurerm_resource_group.spoke_vnet_rg",
            "module.azure_firewall.azurerm_firewall.azure_firewall_instance",
            "module.azure_firewall.azurerm_firewall_policy.base_policy",
            "module.azure_firewall.azurerm_public_ip.azure_firewall",
            "module.azure_firewall.azurerm_subnet.azure_firewall",
            "module.hub_vnet.azurerm_virtual_network.vnet",
            "module.spoke_vnet.azurerm_virtual_network.vnet",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_vnet_aks_subnet",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "route_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-spoke-centralus/providers/Microsoft.Network/virtualNetworks/vnet-spk-centralus/subnets/snet-aks",
            "route_table_id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-spoke-centralus/providers/Microsoft.Network/routeTables/rt-snet-aks",
            "subnet_id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-spoke-centralus/providers/Microsoft.Network/virtualNetworks/vnet-spk-centralus/subnets/snet-aks"
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "azurerm_resource_group.spoke_vnet_rg",
            "module.azure_firewall.azurerm_firewall.azure_firewall_instance",
            "module.azure_firewall.azurerm_firewall_policy.base_policy",
            "module.azure_firewall.azurerm_public_ip.azure_firewall",
            "module.azure_firewall.azurerm_subnet.azure_firewall",
            "module.hub_vnet.azurerm_virtual_network.vnet",
            "module.spoke_vnet.azurerm_virtual_network.vnet",
            "module.spoke_vnet_aks_subnet.azurerm_route_table.rt",
            "module.spoke_vnet_aks_subnet.azurerm_subnet.vnet",
            "module.spoke_vnet_aks_subnet.data.azurerm_virtual_network.vnet_name",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_vnet_scoring_subnet",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet_name",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.3.0.0/16"
            ],
            "dns_servers": [
              "10.1.4.4"
            ],
            "guid": "4ab7aff0-1deb-42a1-9eaa-7156bad5525f",
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-spoke-centralus/providers/Microsoft.Network/virtualNetworks/vnet-spk-centralus",
            "location": "centralus",
            "name": "vnet-spk-centralus",
            "resource_group_name": "rg-net-spoke-centralus",
            "subnets": [
              "snet-scoring",
              "snet-aks"
            ],
            "vnet_peerings": {
              "vnet-spk-centralus-to-vnet-hub-centralus": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/virtualNetworks/vnet-hub-centralus"
            }
          }
        }
      ]
    },
    {
      "module": "module.spoke_vnet_scoring_subnet",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-spoke-centralus/providers/Microsoft.Network/routeTables/rt-snet-scoring",
            "location": "centralus",
            "name": "rt-snet-scoring",
            "resource_group_name": "rg-net-spoke-centralus",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "default_egress",
                "next_hop_in_ip_address": "10.1.4.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "azurerm_resource_group.spoke_vnet_rg",
            "module.azure_firewall.azurerm_firewall.azure_firewall_instance",
            "module.azure_firewall.azurerm_firewall_policy.base_policy",
            "module.azure_firewall.azurerm_public_ip.azure_firewall",
            "module.azure_firewall.azurerm_subnet.azure_firewall",
            "module.hub_vnet.azurerm_virtual_network.vnet",
            "module.spoke_vnet.azurerm_virtual_network.vnet",
            "module.spoke_vnet_scoring_subnet.azurerm_subnet.vnet",
            "module.spoke_vnet_scoring_subnet.data.azurerm_virtual_network.vnet_name",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_vnet_scoring_subnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.3.4.0/24",
            "address_prefixes": [
              "10.3.4.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-spoke-centralus/providers/Microsoft.Network/virtualNetworks/vnet-spk-centralus/subnets/snet-scoring",
            "name": "snet-scoring",
            "resource_group_name": "rg-net-spoke-centralus",
            "virtual_network_name": "vnet-spk-centralus"
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "azurerm_resource_group.spoke_vnet_rg",
            "module.azure_firewall.azurerm_firewall.azure_firewall_instance",
            "module.azure_firewall.azurerm_firewall_policy.base_policy",
            "module.azure_firewall.azurerm_public_ip.azure_firewall",
            "module.azure_firewall.azurerm_subnet.azure_firewall",
            "module.hub_vnet.azurerm_virtual_network.vnet",
            "module.spoke_vnet.azurerm_virtual_network.vnet",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_vnet_scoring_subnet",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "route_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-spoke-centralus/providers/Microsoft.Network/virtualNetworks/vnet-spk-centralus/subnets/snet-scoring",
            "route_table_id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-spoke-centralus/providers/Microsoft.Network/routeTables/rt-snet-scoring",
            "subnet_id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-spoke-centralus/providers/Microsoft.Network/virtualNetworks/vnet-spk-centralus/subnets/snet-scoring"
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "azurerm_resource_group.spoke_vnet_rg",
            "module.azure_firewall.azurerm_firewall.azure_firewall_instance",
            "module.azure_firewall.azurerm_firewall_policy.base_policy",
            "module.azure_firewall.azurerm_public_ip.azure_firewall",
            "module.azure_firewall.azurerm_subnet.azure_firewall",
            "module.hub_vnet.azurerm_virtual_network.vnet",
            "module.spoke_vnet.azurerm_virtual_network.vnet",
            "module.spoke_vnet_scoring_subnet.azurerm_route_table.rt",
            "module.spoke_vnet_scoring_subnet.azurerm_subnet.vnet",
            "module.spoke_vnet_scoring_subnet.data.azurerm_virtual_network.vnet_name",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_vnet_training_subnet",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet_name",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.3.0.0/16"
            ],
            "dns_servers": [
              "10.1.4.4"
            ],
            "guid": "4ab7aff0-1deb-42a1-9eaa-7156bad5525f",
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-spoke-centralus/providers/Microsoft.Network/virtualNetworks/vnet-spk-centralus",
            "location": "centralus",
            "name": "vnet-spk-centralus",
            "resource_group_name": "rg-net-spoke-centralus",
            "subnets": [
              "snet-scoring",
              "snet-aks",
              "snet-training"
            ],
            "vnet_peerings": {
              "vnet-spk-centralus-to-vnet-hub-centralus": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-core-hub-centralus/providers/Microsoft.Network/virtualNetworks/vnet-hub-centralus"
            }
          }
        }
      ]
    },
    {
      "module": "module.spoke_vnet_training_subnet",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-spoke-centralus/providers/Microsoft.Network/routeTables/rt-snet-training",
            "location": "centralus",
            "name": "rt-snet-training",
            "resource_group_name": "rg-net-spoke-centralus",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "default_egress",
                "next_hop_in_ip_address": "10.1.4.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "azurerm_resource_group.spoke_vnet_rg",
            "module.azure_firewall.azurerm_firewall.azure_firewall_instance",
            "module.azure_firewall.azurerm_firewall_policy.base_policy",
            "module.azure_firewall.azurerm_public_ip.azure_firewall",
            "module.azure_firewall.azurerm_subnet.azure_firewall",
            "module.hub_vnet.azurerm_virtual_network.vnet",
            "module.spoke_vnet.azurerm_virtual_network.vnet",
            "module.spoke_vnet_training_subnet.azurerm_subnet.vnet",
            "module.spoke_vnet_training_subnet.data.azurerm_virtual_network.vnet_name",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_vnet_training_subnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.3.3.0/24",
            "address_prefixes": [
              "10.3.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-spoke-centralus/providers/Microsoft.Network/virtualNetworks/vnet-spk-centralus/subnets/snet-training",
            "name": "snet-training",
            "resource_group_name": "rg-net-spoke-centralus",
            "virtual_network_name": "vnet-spk-centralus"
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "azurerm_resource_group.spoke_vnet_rg",
            "module.azure_firewall.azurerm_firewall.azure_firewall_instance",
            "module.azure_firewall.azurerm_firewall_policy.base_policy",
            "module.azure_firewall.azurerm_public_ip.azure_firewall",
            "module.azure_firewall.azurerm_subnet.azure_firewall",
            "module.hub_vnet.azurerm_virtual_network.vnet",
            "module.spoke_vnet.azurerm_virtual_network.vnet",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.spoke_vnet_training_subnet",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "route_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-spoke-centralus/providers/Microsoft.Network/virtualNetworks/vnet-spk-centralus/subnets/snet-training",
            "route_table_id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-spoke-centralus/providers/Microsoft.Network/routeTables/rt-snet-training",
            "subnet_id": "/subscriptions/52c8334e-33c1-4df4-bba5-859bf96b7377/resourceGroups/rg-net-spoke-centralus/providers/Microsoft.Network/virtualNetworks/vnet-spk-centralus/subnets/snet-training"
          },
          "dependencies": [
            "azurerm_resource_group.hub_rg",
            "azurerm_resource_group.spoke_vnet_rg",
            "module.azure_firewall.azurerm_firewall.azure_firewall_instance",
            "module.azure_firewall.azurerm_firewall_policy.base_policy",
            "module.azure_firewall.azurerm_public_ip.azure_firewall",
            "module.azure_firewall.azurerm_subnet.azure_firewall",
            "module.hub_vnet.azurerm_virtual_network.vnet",
            "module.spoke_vnet.azurerm_virtual_network.vnet",
            "module.spoke_vnet_training_subnet.azurerm_route_table.rt",
            "module.spoke_vnet_training_subnet.azurerm_subnet.vnet",
            "module.spoke_vnet_training_subnet.data.azurerm_virtual_network.vnet_name",
            "random_string.random"
          ]
        }
      ]
    }
  ]
}